# stingray-plugin-js

./: .gitignore  README.md  make.cmd
cmake/: CMakeMacros.cmake  CMakeSettings.cmake
src/: CMakeLists.txt  js_environment.cpp  js_environment.h  plugin.cpp
src/interface/: if_application.cpp  if_stingray.cpp  if_stingray.h
